--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                                 font-family: ar berkley;
                               }
                     h2       {
-                             color: #FDEEF4;
+                             color: #FF0000;
                     }
     div#carousel {  
   background-image: url('sthomp18.github.io/images/42539896_457864184725851_6688105214857183232_n.png');
