--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@ background-color: #ffd8d8;
 	</style>
 
 	<Center><div class='bordercontrol'>
-		<div class='border1'><h2>Clothing</h2></div>
+		<a href='https://sthomp18.github.io/shows.github.io/'><div class='border1'><h2>Clothing</h2></div></a>
 		<br>
-		<div class='border2'><h2>Personal Finance </h2></div>
+		<a href='https://sthomp18.github.io/playboy/'><div class='border2'><h2>Personal Finance </h2></div></a>
 		<br>
-		<div class='border3'><h2>Healthmania</h2></div>
+		<a href='https://sthomp18.github.io/fitness.io/'><div class='border3'><h2>Healthmania</h2></div></a>
 		<br>
-		<div class='border4'><h2>Wall Street</h2></div>
+		<a href='https://sthomp18.github.io/games.github.io/'><div class='border4'><h2>Wall Street</h2></div></a>
 		<br>
 		<div></center>
            
