--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
          
  
    <head>
-             <img src="sthomp18.github.io/images/giphy (1).gif" height='50px' width='50px'/>     
+             <img src="sthomp18.github.io/images/giphy (1).gif"/>     
          </head>
          
 <body>         
