--- a/index.html
+++ b/index.html
@@ -40,17 +40,18 @@
 	<br>
 	<br>
 	<br>
-	<Center><div class='bordercontrol'>
-		
+	
+		<div id="right-sidebar">
 		<a href='https://sthomp18.github.io/playboy/'><div class='border2'><h2>Personal Finance </h2></div></a>
 		<br>
     <a href='https://sthomp18.github.io/shows.github.io/'><div class='border1'><h2>Clothing</h2></div></a>
-		<br>
+		<br></div>
+			<div id= "left-sidebar">
 		<a href='https://sthomp18.github.io/fitness.io/'><div class='border3'><h2>Healthmania</h2></div></a>
 		<br>
 		<a href='https://sthomp18.github.io/games.github.io/'><div class='border4'><h2>Wall Street</h2></div></a>
-		<br>
-		<div></center>
+		<br></div>
+		
            
  </body>
 <footer> 
