--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     }
    
                     }
-</style>
+</style></script>
 <script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
          
  
