--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
 		<a href='https://sthomp18.github.io/games.github.io/'><div class='border4'><h2>Wall Street</h2></div></a>
 		<br></div>
 		
-           
+           <center><iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLWrF4FHUA_yPq4UMFc58h-GG0oNljc5hP" frameborder="0" 
+		   allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
  </body>
 <footer> 
          </footer>
