--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
          
  
    <head>
-             <img src="sthomp18.github.io/images/giphy.gif" width="100px" height="100px"/>     
+           <center> <img src="sthomp18.github.io/images/giphy.gif" width="100px" height="100px"/> </center>    
          </head>
          
 <body>         
