--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
          
  
    <head>
-           <center><div class='border4'> <img src="sthomp18.github.io/images/giphy.gif" width="100px" height="100px"/></div> </center>    
+           <center><div class='border5'> <img src="sthomp18.github.io/images/giphy.gif" width="100px" height="100px"/></div> </center>    
          </head>
          
 <body>         
@@ -52,8 +52,8 @@
 		<a href='https://sthomp18.github.io/games.github.io/'><div class='border4'><h2>Wall Street</h2></div></a>
 		<br></div>
 		
-           <center><div class='border5'><iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLWrF4FHUA_yPq4UMFc58h-GG0oNljc5hP" frameborder="0" 
-		   allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div></center>
+           <center><iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLWrF4FHUA_yPq4UMFc58h-GG0oNljc5hP" frameborder="0" 
+		   allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
  </body>
 <footer> 
          </footer>
