--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		<div id="right-sidebar">
 		<a href='https://sthomp18.github.io/playboy/'><div class='border2'><h2>Personal Finance </h2></div></a>
 		<br>
-    <a href='https://sthomp18.github.io/shows.github.io/'><div class='border1'><h2>Clothing</h2></div></a>
+    <a href='https://sthomp18.github.io/shows.github.io/'><div class='border1'><h2>Clothing & Appliances</h2></div></a>
 		<br></div>
 			<div id= "left-sidebar">
 		<a href='https://sthomp18.github.io/fitness.io/'><div class='border3'><h2>Healthmania</h2></div></a>
