--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	<br>
 	<br>
 	<br>
-	
+	<div class='border7'>
 		<div id="right-sidebar">
 		<a href='https://sthomp18.github.io/playboy/'><div class='border2'><h2>Personal Finance </h2></div></a>
 		<br>
@@ -51,10 +51,8 @@
 		<br>
 		<a href='https://sthomp18.github.io/games.github.io/'><div class='border4'><h2>Wall Street</h2></div></a>
 		<br></div>
-		
-           <center><iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLWrF4FHUA_yPq4UMFc58h-GG0oNljc5hP" 
-			   frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
- </body>
+		</div>
+          </body>
 <footer> 
          </footer>
                     </html>
