--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
          
  
    <head>
-           <center><div class='border5'> <img src="sthomp18.github.io/images/giphy.gif" width="100px" height="100px"/></div> </center>    
+           <center><div class='border5'> <img src="diamondrolls.github.io/images/giphy.gif" width="100px" height="100px"/></div> </center>    
          </head>
          
 <body>         
@@ -42,14 +42,14 @@
 	<br>
 	
 		<div id="right-sidebar">
-		<a href='https://sthomp18.github.io/playboy/'><div class='border2'><h2>Personal Finance </h2></div></a>
+		<a href='https://diamondrolls.github.io/playboy/'><div class='border2'><h2>Personal Finance </h2></div></a>
 		<br>
-    <a href='https://sthomp18.github.io/shows.github.io/'><div class='border1'><h2>Clothing & Appliances</h2></div></a>
+    <a href='https://diamondrolls.github.io/shows.github.io/'><div class='border1'><h2>Clothing & Appliances</h2></div></a>
 		<br></div>
 			<div id= "left-sidebar">
-		<a href='https://sthomp18.github.io/fitness.io/'><div class='border3'><h2>Healthmania</h2></div></a>
+		<a href='https://diamondrolls.github.io/fitness.io/'><div class='border3'><h2>Healthmania</h2></div></a>
 		<br>
-		<a href='https://sthomp18.github.io/games.github.io/'><div class='border4'><h2>Wall Street</h2></div></a>
+		<a href='https://diamondrolls.github.io/games.github.io/'><div class='border4'><h2>Wall Street</h2></div></a>
 		<br></div>
 		
           </body>
