--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
               <!DOCTYPE html>
 <html>
          <link href= 'homepage/style.css' rel= 'stylesheet'>
-       <link rel="icon" type="img/png" href="sthomp18.github.io/images/giphy(1).gif">
+       <link rel="icon" type="img/png" href="diamondrolls.github.io/images/giphy(1).gif">
              <title>Diamondrolls / Healthy Living, Positive Vibes, Prosperity</title>
           
          <meta name="author" content="Solomon Shamir Thompson">
