--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
               <!DOCTYPE html>
 <html>
-         <link href= 'homepage/style.css' rel= 'stylesheet'>
+         <link href= 'https://diamondrolls.github.io/homepage/style.css' rel= 'stylesheet'>
        <link rel="icon" type="img/png" href="diamondrolls.github.io/images/giphy(1).gif">
              <title>Diamondrolls / Healthy Living, Positive Vibes, Prosperity</title>
           
