--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
               <!DOCTYPE html>
 <html>
+	<header>
          <link href= 'https://diamondrolls.github.io/homepage/style.css' rel= 'stylesheet'>
        <link rel="icon" type="img/png" href="diamondrolls.github.io/images/giphy(1).gif">
              <title>Diamondrolls / Healthy Living, Positive Vibes, Prosperity</title>
@@ -27,8 +28,7 @@
    
                     }
 </style></script>
-<script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
-         
+	</header>       
  
    <head>
            <center><div class='border5'> <img src="diamondrolls.github.io/images/giphy.gif" width="100px" height="100px"/></div> </center>    
@@ -42,14 +42,14 @@
 	<br>
 	
 		<div id="right-sidebar">
-		<a href='https://diamondrolls.github.io/playboy/'><div class='border2'><h2>Personal Finance </h2></div></a>
+		<a href='https://diamondrolls.github.io/personalfinance/'><div class='border2'><h2>Personal Finance </h2></div></a>
 		<br>
-    <a href='https://diamondrolls.github.io/shows.github.io/'><div class='border1'><h2>Clothing & Appliances</h2></div></a>
+                <a href='https://diamondrolls.github.io/clothes/'><div class='border1'><h2>Clothing & Appliances</h2></div></a>
 		<br></div>
 			<div id= "left-sidebar">
-		<a href='https://diamondrolls.github.io/fitness.io/'><div class='border3'><h2>Healthmania</h2></div></a>
+		<a href='https://diamondrolls.github.io/fitness/'><div class='border3'><h2>Healthmania</h2></div></a>
 		<br>
-		<a href='https://diamondrolls.github.io/games.github.io/'><div class='border4'><h2>Wall Street</h2></div></a>
+		<a href='https://diamondrolls.github.io/stocks/'><div class='border4'><h2>Wall Street</h2></div></a>
 		<br></div>
 		
           </body>
