--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<header>
          <link href= 'https://diamondrolls.github.io/homepage/style.css' rel= 'stylesheet'>
-       <link rel="icon" type="img/png" href="diamondrolls.github.io/images/giphy(1).gif">
+       <link rel="icon" type="img/png" href="https://i.pinimg.com/564x/53/95/03/5395030b318833c173edfb3452d28dae.jpg">
              <title>Diamondrolls / Healthy Living, Positive Vibes, Prosperity</title>
           
          <meta name="author" content="Solomon Shamir Thompson">
@@ -31,7 +31,7 @@
 	</header>       
  
    <head>
-           <center><div class='border5'> <img src="diamondrolls.github.io/images/giphy.gif" width="100px" height="100px"/></div> </center>    
+           <center><div class='border5'> <img src="https://i.pinimg.com/564x/53/95/03/5395030b318833c173edfb3452d28dae.jpg" width="100px" height="100px"/></div> </center>    
          </head>
          
 <body>         
