--- a/index.html
+++ b/index.html
@@ -42,15 +42,19 @@
 	<br>
 	
 		<div id="right-sidebar">
-		<a href='https://diamondrolls.github.io/personalfinance/'><div class='border2'><h2>Personal Finance </h2></div></a>
-		<br>
-                <a href='https://diamondrolls.github.io/clothes/'><div class='border1'><h2>Clothing & Appliances</h2></div></a>
-		<br></div>
+			<center><div class='border5'> <img src="https://i.pinimg.com/564x/53/95/03/5395030b318833c173edfb3452d28dae.jpg" width="400px" height="500px"/></div> </center>    
+        
+		</div>
 			<div id= "left-sidebar">
 		<a href='https://diamondrolls.github.io/fitness/'><div class='border3'><h2>Healthmania</h2></div></a>
 		<br>
 		<a href='https://diamondrolls.github.io/stocks/'><div class='border4'><h2>Wall Street</h2></div></a>
+		<br>
+	        <a href='https://diamondrolls.github.io/personalfinance/'><div class='border2'><h2>Personal Finance </h2></div></a>
+		<br>
+                <a href='https://diamondrolls.github.io/clothes/'><div class='border1'><h2>Clothing & Appliances</h2></div></a>
 		<br></div>
+	</div>
 		
           </body>
 <footer> 
