--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	<br>
 	
 		<div id="right-sidebar">
-			<center><div class='border5'> <img src="https://i.pinimg.com/564x/53/95/03/5395030b318833c173edfb3452d28dae.jpg" /></div> </center>    
+			<center><div class='border5'><h1>DR</h1></div> </center>    
         
 		</div>
 			<div id= "left-sidebar">
