--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<header>
          <link href= 'https://diamondrolls.github.io/homepage/style.css' rel= 'stylesheet'>
-       <link rel="icon" type="img/png" href="https://i.pinimg.com/564x/53/95/03/5395030b318833c173edfb3452d28dae.jpg">
+       <link rel="icon" type="image/gif" href="https://i.pinimg.com/originals/bd/6c/59/bd6c59a1bebe561cfe58f3cabbe80ced.gif">
              <title>Diamondrolls / Healthy Living, Positive Vibes, Prosperity</title>
           
          <meta name="author" content="Solomon Shamir Thompson">
