--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<header>
          <link href= 'https://diamondrolls.github.io/homepage/style.css' rel= 'stylesheet'>
-       <link rel="icon" type="image/gif" href="https://i.pinimg.com/originals/bd/6c/59/bd6c59a1bebe561cfe58f3cabbe80ced.gif">
+       <link rel="icon" type="image/png" href="homepage/images/just because.png">
              <title>Diamondrolls / Healthy Living, Positive Vibes, Prosperity</title>
           
          <meta name="author" content="Solomon Shamir Thompson">
