--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<header>
          <link href= 'https://diamondrolls.github.io/homepage/style.css' rel= 'stylesheet'>
-       <link rel="shortcut icon" type="image/jpg" href="https://i.pinimg.com/564x/72/4b/29/724b298d081474c526faeefe63f70dae.jpg"/>
+       <link rel="favicon" type="image/jpg" href="https://i.pinimg.com/564x/72/4b/29/724b298d081474c526faeefe63f70dae.jpg"/>
              <title>Diamondrolls / Healthy Living, Positive Vibes, Prosperity</title>
           
          <meta name="author" content="Solomon Shamir Thompson">
