--- a/index.html
+++ b/index.html
@@ -42,8 +42,22 @@
 	<br>
 	
 		<div id="right-sidebar">
-			<center><div class='border5'><h1>DR</h1></div> </center>    
-        
+			<div class="chat">
+  <div class="chat-title">
+    <h5>diamondrolls</h5>
+    <h6></h6>
+    <figure class="avatar">
+      <img src="https://i.pinimg.com/564x/ec/f1/20/ecf1206810bb15be7fcb7180e8571520.jpg" /></figure>
+  </div>
+  <div class="messages">
+    <div class="messages-content"></div>
+  </div>
+  <div class="message-box">
+    <textarea type="text" class="message-input" placeholder="write something..."></textarea>
+    <button type="submit" class="message-submit">post</button>
+  </div>
+
+</div>
 		</div>
 			<div id= "left-sidebar">
 		<a href='https://diamondrolls.github.io/fitness/'><div class='border3'><h2>Healthmania</h2></div></a>
