--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <h5>diamondrolls</h5>
     <h6></h6>
     <figure class="avatar">
-      <img src="https://i.pinimg.com/564x/ec/f1/20/ecf1206810bb15be7fcb7180e8571520.jpg" /></figure>
+      <img src="" /></figure>
   </div>
   <div class="messages">
     <div class="messages-content"></div>
