--- a/index.html
+++ b/index.html
@@ -79,21 +79,18 @@
 	var $messages = $('.messages-content'),
     d, h, m,
     i = 0;
-
 $(window).load(function() {
   $messages.mCustomScrollbar();
   setTimeout(function() {
     fakeMessage();
   }, 100);
 });
-
 function updateScrollbar() {
   $messages.mCustomScrollbar("update").mCustomScrollbar('scrollTo', 'bottom', {
     scrollInertia: 10,
     timeout: 0
   });
 }
-
 function setDate(){
   d = new Date()
   if (m != d.getMinutes()) {
@@ -101,7 +98,6 @@ function setDate(){
     $('<div class="timestamp">' + d.getHours() + ':' + m + '</div>').appendTo($('.message:last'));
   }
 }
-
 function insertMessage() {
   msg = $('.message-input').val();
   if ($.trim(msg) == '') {
@@ -115,42 +111,35 @@ function insertMessage() {
     fakeMessage();
   }, 1000 + (Math.random() * 20) * 100);
 }
-
 $('.message-submit').click(function() {
   insertMessage();
 });
-
 $(window).on('keydown', function(e) {
   if (e.which == 13) {
     insertMessage();
     return false;
   }
 })
-
 var Fake = [
   'Hi there welcome to diamondrolls',
   'if you should subscribe you get a free shirt and automatic emails sent to you weekly',
-  'How are you?',
   'be apart of our community',
   'Bye',
   ':)'
 ]
-
 function fakeMessage() {
   if ($('.message-input').val() != '') {
     return false;
   }
-  $('<div class="message loading new"><figure class="avatar"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/156381/profile/profile-80.jpg" /></figure><span></span></div>').appendTo($('.mCSB_container'));
+  $('<div class="message loading new"><figure class="avatar"><img src="https://i.pinimg.com/564x/c5/a6/89/c5a689f15dfa6c26ddd90db46ac95b08.jpg" /></figure><span></span></div>').appendTo($('.mCSB_container'));
   updateScrollbar();
-
   setTimeout(function() {
     $('.message.loading').remove();
-    $('<div class="message new"><figure class="avatar"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/156381/profile/profile-80.jpg" /></figure>' + Fake[i] + '</div>').appendTo($('.mCSB_container')).addClass('new');
+    $('<div class="message new"><figure class="avatar"><img src="https://i.pinimg.com/564x/c5/a6/89/c5a689f15dfa6c26ddd90db46ac95b08.jpg" /></figure>' + Fake[i] + '</div>').appendTo($('.mCSB_container')).addClass('new');
     setDate();
     updateScrollbar();
     i++;
   }, 1000 + (Math.random() * 20) * 100);
-
 }
 	</script>
           </body>
