--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	<br>
 	
 		<div id="right-sidebar">
-			<h7 class="neon" data-text="[DIAMONDROLLS]">[DIAMONDROLLS]</h7>
+			<h7 class="neon" data-text="DIAMONDROLLS">DIAMONDROLLS</h7>
 
 </div>
 		</div>
