--- a/index.html
+++ b/index.html
@@ -54,11 +54,10 @@
 	<br>
 	<br>
 	<br>
-	
+	<div class='border5'>
 		<div id="right-sidebar">
 			<h7 class="neon" data-text="DIAMONDROLLS">DIAMONDROLLS</h7>
 
-</div>
 		</div>
 			<div id= "left-sidebar">
 		<a href='https://diamondrolls.github.io/fitness/'><div class='border3'><h2>Healthmania</h2></div></a>
@@ -72,11 +71,16 @@
 		<br>
                 <a href='https://diamondrolls.github.io/clothes/'><div class='border1'><h2>Clothing & Appliances</h2></div></a>
 		<br></div>
-	</div>
+          </div>
 		<br>
 	<br>
 	<br>
-
+            <img src='https://i.pinimg.com/564x/6b/a7/7f/6ba77f71ef870e4462782dc92fb167a3.jpg' height='500px' width='500px'>
+            <img src='https://i.pinimg.com/564x/6b/a7/7f/6ba77f71ef870e4462782dc92fb167a3.jpg' height='500px' width='500px'>
+            <img src='https://i.pinimg.com/564x/6b/a7/7f/6ba77f71ef870e4462782dc92fb167a3.jpg' height='500px' width='500px'>
+            <img src='https://i.pinimg.com/564x/6b/a7/7f/6ba77f71ef870e4462782dc92fb167a3.jpg' height='500px' width='500px'>
+            <img src='https://i.pinimg.com/564x/6b/a7/7f/6ba77f71ef870e4462782dc92fb167a3.jpg' height='500px' width='500px'>
+            <img src='https://i.pinimg.com/564x/6b/a7/7f/6ba77f71ef870e4462782dc92fb167a3.jpg' height='500px' width='500px'>
           </body>
 <footer> 
          </footer>
