--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 		<br>
 		<br>
                 <a href='https://diamondrolls.github.io/clothes/'><div class='border1'><h2>Clothing & Appliances</h2></div></a>
-		<br></div>
-          
+		</div>
+          <br>
 		<br>
 	<br>
 	<br>
