--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 	<br>
 	<br> 
 	
-	<center>  <img src='https://i.pinimg.com/564x/af/ba/2c/afba2c401a3a004ff8dc318be4dbffaa.jpg' height='200px' width='360px'></center>
+	<center>  <img src='https://i.pinimg.com/originals/4d/de/f1/4ddef18732b35ebab7372e1fbb01b8ce.gif' height='500px' width='360px'></center>
 	   <center><a href='https://diamondrolls.github.io/arcade/'><button>click here for games</button></a></center>
          <br>
 	<br>
@@ -90,11 +90,7 @@
 	<br> 
 	<center>  <img src='https://i.pinimg.com/originals/bc/d1/7e/bcd17e855bcfaf3602d9a7cbf8ec2576.jpg' height='500px' width='500px'></center>
            <br>
-	<br>
-	<br>
-	<br>
-	<center> <img src='https://i.pinimg.com/originals/ee/84/77/ee8477eebafd8fe03dfd125c022cb252.gif' height='200px' width='360px'></center>
-          
+	<h7 class="neon" data-text="DIAMONDROLLS">DIAMONDROLLS</h7>
 	
 	<footer> 
 	
