--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 	<br>
 	
 		<div id="right-sidebar">
-			<h7 class="neon" data-text="[DIAMONDROLLS]">[DIAMONDROLLS]</h7>
+			<h7 class="neon" data-text="DIAMONDROLL$">DIAMONDROLL$</h7>
 
 </div>
 		</div>
@@ -73,6 +73,7 @@
 		<br></div>
 	</div>
 		<br>
+            <h7 class="neon" data-text="DIAMONDROLL$">DIAMONDROLL$</h7>
 	<br>
 	<br>
 
