--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                 <br>
 		<a href='https://diamondrolls.github.io/stocks/'><div class='border4'><h2>Wall Street</h2></div></a>
 		<br>
+				<h7 class="neon" data-text="DIAMONDROLL$">DIAMONDROLL$</h7>
 		<br>
 	        <a href='https://diamondrolls.github.io/personalfinance/'><div class='border2'><h2>Personal Finance </h2></div></a>
 		<br>
@@ -72,10 +73,7 @@
                 <a href='https://diamondrolls.github.io/clothes/'><div class='border1'><h2>Clothing & Appliances</h2></div></a>
 		<br></div>
 	</div>
-		<br>
-            <h7 class="neon" data-text="DIAMONDROLL$">DIAMONDROLL$</h7>
-	<br>
-	<br>
+<center><h7 class="neon" data-text="DIAMONDROLL$">DIAMONDROLL$</h7></center>
 
           </body>
 <footer> 
