--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 	        <a href='https://diamondrolls.github.io/fitness/'><div class='border3'><h2>Healthmania</h2></div></a>
 		<br>
                 <br>
-                <a href='https://diamondrolls.github.io/clothes/'><div class='border4'><h2>Clothing & Appliances</h2></div></a>
+                <a href='https://diamondrolls.github.io/clothes/'><div class='border4'><h2>Shop</h2></div></a>
 		<br></div>
 	</div>
 <center><h7 class="neon" data-text="DIAMONDROLL$">DIAMONDROLL$</h7></center>
