--- a/index.html
+++ b/index.html
@@ -62,16 +62,16 @@
 </div>
 		</div>
 			<div id= "left-sidebar">
-		<a href='https://diamondrolls.github.io/personalfinance/'><div class='border1'><h2>Savings & Finance </h2></div></a>
+		<a href='https://diamondrolls.github.io/personalfinance/'><div class='finances1'><h2>Savings & Finance </h2></div></a>
 		<br>
 		<br>
-		<a href='https://diamondrolls.github.io/stocks/'><div class='border2'><h2>Wall Street</h2></div></a>
+		<a href='https://diamondrolls.github.io/stocks/'><div class='stocks2'><h2>Wall Street</h2></div></a>
 		<br>
 		<br>
-	        <a href='https://diamondrolls.github.io/fitness/'><div class='border3'><h2>Healthmania</h2></div></a>
+	        <a href='https://diamondrolls.github.io/fitness/'><div class='health3'><h2>Healthmania</h2></div></a>
 		<br>
                 <br>
-                <a href='https://diamondrolls.github.io/clothes/'><div class='border4'><h2>Shop</h2></div></a>
+                <a href='https://diamondrolls.github.io/clothes/'><div class='shop4'><h2>Shop</h2></div></a>
 		<br></div>
 	</div>
 <center><h7 class="neon" data-text="DIAMONDROLL$">DIAMONDROLL$</h7></center>
