--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 	        <a href='https://diamondrolls.github.io/fitness/'><div class='health3'><h2>Healthmania</h2></div></a>
 		<br>
                 <br>
-                <a href='https://diamondrolls.github.io/clothes/'><div class='shop4'><h2>Shop</h2></div></a>
+                <a href='https://diamondrolls.github.io/clothes/'><div class='products4'><h2>Products</h2></div></a>
 		<br></div>
 	</div>
 <center><h7 class="neon" data-text="DIAMONDROLL$">DIAMONDROLL$</h7></center>
