--- a/index.html
+++ b/index.html
@@ -44,25 +44,12 @@
 
 
    <head>
-                <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-<input type="hidden" name="cmd" value="_s-xclick">
-<input type="hidden" name="hosted_button_id" value="AYLXCW7S6GKDC">
-<table>
-<tr><td><input type="hidden" name="on0" value="Options">Options</td></tr><tr><td><select name="os0">
-	<option value="free">free : $0.50 USD - weekly</option>
-	<option value="$">$ : $5.00 USD - monthly</option>
-	<option value="$">$ : $65.00 USD - yearly</option>
-</select> </td></tr>
-</table>
-<input type="hidden" name="currency_code" value="USD">
-<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_subscribe_SM.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-</form>
+                
 
          </head>
          
 <body>         
-     <div id="memberchiparea">
+   <center>  <div id="memberchiparea">
 <br>
 	<br>
 	<br>
@@ -103,7 +90,7 @@
                 <a href='https://diamondrolls.github.io/clothes/'><div class='products4'><h2>Products</h2></div></a>
 		<br></div>
 	</div>
-</div>
+</div></center>
           </body>
 <footer> 
          </footer>
