--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	</header>       
  
    <head>
-               
+            <div class ="containers"></div>    
          </head>
          
 <body>    
@@ -51,7 +51,7 @@
 	    <br>
       <br>
       <br>
-               <div id='membershiparea'>
+               <div class='membershiparea'>
 
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 <input type="hidden" name="cmd" value="_s-xclick">
