--- a/index.html
+++ b/index.html
@@ -57,7 +57,24 @@
       <br>
 	    <br>
       <br>
-    
+    <section class="slide">
+    <place>
+       <img src="https://i.pinimg.com/originals/09/00/ee/0900ee030d96065449beaa7eade5ea0e.gif" width="230px"height="350px">
+    </place>
+    <place>
+       <img src="https://i.pinimg.com/564x/04/13/2e/04132e6954334118f9caf522dcc23011.jpg"width="230px"height="350px">
+    </place>
+    <place>
+       <img src="https://i.pinimg.com/564x/3f/e2/5d/3fe25d8ad7b3060d43152e7c93c8b828.jpg?b=t"width="230px"height="350px">
+    </place>
+    <place>
+       <img src="https://i.pinimg.com/564x/27/d2/7b/27d27b7f0a340a61b3d00df98a2510e9.jpg"width="230px"height="350px">
+    </place>
+    <place>
+       <img src="https://i.pinimg.com/564x/fb/b4/30/fbb4307134f02008b792db60f26aa8e5.jpg?b=t"width="230px"height="350px">
+    </place>
+</section>
+<!-- Work of Juston Cheney -->
 
         
 
@@ -99,7 +116,20 @@
 
 </center>
 	<script>
-		
+		var x = 0;
+var y = 0;
+
+var myVar=setInterval(function(){slides()},3000);
+
+function slides() {
+  document.getElementsByTagName("place")[y].style.width="0px";
+  document.getElementsByTagName("place")[x].style.width="100%";
+  y = x;
+  ++x;
+  if (x == 5) {
+     x = 0;
+  }
+}
 		</script>
           </body>
 <footer> 
