--- a/index.html
+++ b/index.html
@@ -52,11 +52,21 @@
       <br>
       <br>
 	  <br>
-      <br>
-	    <br>
-      <br>
-	    <br>
-      <br>
+     
+	    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+<input type="hidden" name="cmd" value="_s-xclick">
+<input type="hidden" name="hosted_button_id" value="AYLXCW7S6GKDC">
+<table>
+<tr><td><input type="hidden" name="on0" value="Options">Options</td></tr><tr><td><select name="os0">
+	<option value="Students">Students : $5.50 USD - monthly</option>
+	<option value="Bosses">Bosses : $120.00 USD - yearly</option>
+</select> </td></tr>
+</table>
+<input type="hidden" name="currency_code" value="USD">
+<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_subscribe_SM.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+</form>
+
     <section class="slide">
     <place>
        <img src="https://i.pinimg.com/564x/fb/b4/30/fbb4307134f02008b792db60f26aa8e5.jpg?b=t" width="230px"height="350px">
@@ -78,20 +88,7 @@
 
         
 
-<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-<input type="hidden" name="cmd" value="_s-xclick">
-<input type="hidden" name="hosted_button_id" value="AYLXCW7S6GKDC">
-<table>
-<tr><td><input type="hidden" name="on0" value="Options">Options</td></tr><tr><td><select name="os0">
-	<option value="kids">kids : $0.50 USD - weekly</option>
-	<option value="students">students : $5.00 USD - monthly</option>
-	<option value="graduates">graduates : $130.00 USD - yearly</option>
-</select> </td></tr>
-</table>
-<input type="hidden" name="currency_code" value="USD">
-<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_subscribe_SM.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-</form>
+
 <A HREF="https://www.paypal.com/cgi-bin/webscr?cmd=_subscr-find&alias=UAGYHTHA6PUVJ">
 <IMG SRC="https://www.paypalobjects.com/en_US/i/btn/btn_unsubscribe_SM.gif" BORDER="0">
 </A>
